--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,44 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+html *,
+html *::before,
+html *::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+:root {
+  --black: #000;
+  --white: #fff;
+  --red-50: #f53e32;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-weight: 1rem;
+  font-style: normal;
+}
+
+/* body.modal-open {
+  overflow: hidden; 
+  pointer-events: none; 
+} */
+
+ul {
+  list-style: none;
+}
+
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+img {
+  max-width: 100%;
 }
